Finished all the views for the rails-mister-cocktail challenge! Wow this is great.

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,5 @@
 <h2>New Cocktail </h2>
+<%= link_to 'Homepage', cocktails_path %>
 
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
