--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,20 @@
 <h2>
   Cocktail Name: <%= @cocktail.name %>
 </h2>
-<%= link_to 'View Doses', cocktail_doses_path(@cocktail), class: 'btn btn-info' %>
 <%= link_to 'Cocktail Home', cocktails_path, class: 'btn btn-primary' %>
+<ul>
+  <% @cocktail.doses.all.each do |dose| %>
+  <li>
+    <p>
+      Ingredient:
+      <%= dose.ingredient.name %>
+    </p>
+    <p>
+      Amount:
+      <%= dose.description %>
+    </p>
+    <%= link_to 'Delete Dosage', dose_path(dose), method: :delete, class: 'btn btn-danger' %>
+  </li>
+  <% end %>
+</ul>
+<%= link_to 'New Dosage', new_cocktail_dose_path(@cocktail), class: 'btn btn-info' %>
