--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,3 +1,8 @@
-<h2>
-  New dose for
-</h2>
+<h2>New Dose for pe </h2>
+<%= link_to 'Homepage', cocktails_path, class: "btn btn-primary" %>
+
+<%= simple_form_for [@cocktail, @dose] do |f| %>
+  <%= f.input :description, label: 'Amount: ' %>
+  <%= f.association :ingredient, collection: @ingredients %>
+  <%= f.submit "Add Dose", class: "btn btn-primary" %>
+<% end %>
