--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <!-- logo here in image tag -->
+  <%= cl_image_tag("ausyzhn4talln8qmux8n.png", :quality=>100, :crop=>"scale") %>
   <% end %>
 
   <!-- Right Navigation -->
@@ -17,9 +17,8 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+        <%= link_to "Home", cocktails_path, class: "navbar-wagon-item navbar-wagon-link" %>
+        <%= link_to "New Cocktail", new_cocktail_path, class: "navbar-wagon-item navbar-wagon-link" %>
       </ul>
     </div>
   </div>
