--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,3 +1,4 @@
+<%= cl_image_tag @cocktail.photo, height: 300, width: 300, crop: :fill, crop: :thumb, gravity: :face %>
 <h2>
   Cocktail Name: <%= @cocktail.name %>
 </h2>
