--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <%= link_to "Home", cocktails_path, class: "navbar-wagon-item navbar-wagon-link" %>
-        <%= link_to "New Cocktail", new_cocktail_path, class: "navbar-wagon-item navbar-wagon-link" %>
+        <%= link_to "New", new_cocktail_path, class: "navbar-wagon-item navbar-wagon-link" %>
       </ul>
     </div>
   </div>
